[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/LevelButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Bridge.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Level11.gd" type="Script" id=4]
[ext_resource path="res://scenes/Player2.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/new_tileset.tres" type="TileSet" id=6]
[ext_resource path="res://scenes/Button.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/Bridgelvl11.gd" type="Script" id=8]
[ext_resource path="res://scenes/Button2.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/Bridgelvl10-1.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 115.97, 160.415 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.2941, 4.10962 )

[sub_resource type="Animation" id=3]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Level11" type="Node2D" groups=[
"Level",
]]
position = Vector2( 0, -1 )
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 0, 4, -65536, 0, 4, -65535, 0, 4, -65534, 0, 4, -65533, 0, 4, -65532, 0, 4, -65531, 0, 4, -65530, 0, 4, -65529, 0, 4, -65528, 0, 4, -65527, 0, 4, -65526, 0, 4, -65525, 0, 4, -65524, 0, 4, -65523, 0, 4, -65522, 0, 4, -65521, 0, 4, -65520, 0, 4, -65519, 0, 4, -65518, 0, 4, -65517, 0, 4, -65516, 0, 4, -65515, 0, 4, -65514, 0, 4, -65513, 0, 4, -65512, 0, 4, -65511, 0, 4, -65510, 0, 4, -65509, 0, 4, -65508, 0, 4, -65507, 0, 4, -65506, 0, 4, -65505, 0, 4, -65504, 0, 4, 65535, 0, 4, 0, 0, 5, 1, 0, 5, 2, 0, 5, 3, 0, 5, 4, 0, 5, 5, 0, 5, 6, 0, 5, 7, 0, 5, 8, 0, 5, 9, 0, 5, 10, 0, 5, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 5, 17, 0, 5, 18, 0, 5, 19, 0, 5, 20, 0, 5, 21, 0, 5, 22, 0, 5, 23, 0, 5, 24, 0, 5, 25, 0, 5, 26, 0, 5, 27, 0, 5, 28, 0, 5, 29, 0, 5, 30, 0, 5, 31, 0, 5, 32, 0, 4, 131071, 0, 4, 65536, 0, 5, 65537, 0, 5, 65538, 0, 5, 65539, 0, 5, 65540, 0, 5, 65541, 0, 5, 65542, 0, 5, 65543, 0, 5, 65544, 0, 5, 65545, 0, 5, 65546, 0, 5, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 5, 65553, 0, 5, 65554, 0, 5, 65555, 0, 5, 65556, 0, 5, 65557, 0, 5, 65558, 0, 5, 65559, 0, 5, 65560, 0, 5, 65561, 0, 5, 65562, 0, 5, 65563, 0, 5, 65564, 0, 5, 65565, 0, 5, 65566, 0, 5, 65567, 0, 5, 65568, 0, 4, 196607, 0, 4, 131072, 0, 5, 131073, 0, 5, 131074, 0, 5, 131075, 0, 5, 131076, 0, 5, 131077, 0, 5, 131078, 0, 5, 131079, 0, 5, 131080, 0, 5, 131081, 0, 5, 131082, 0, 5, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 5, 131089, 0, 5, 131090, 0, 5, 131091, 0, 5, 131092, 0, 5, 131093, 0, 5, 131094, 0, 5, 131095, 0, 5, 131096, 0, 5, 131097, 0, 5, 131098, 0, 5, 131099, 0, 5, 131100, 0, 5, 131101, 0, 5, 131102, 0, 5, 131103, 0, 5, 131104, 0, 4, 262143, 0, 4, 196608, 0, 5, 196609, 0, 5, 196610, 0, 5, 196611, 0, 5, 196612, 0, 5, 196613, 0, 5, 196614, 0, 5, 196615, 0, 5, 196616, 0, 5, 196617, 0, 5, 196618, 0, 5, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 5, 196625, 0, 5, 196626, 0, 5, 196627, 0, 5, 196628, 0, 5, 196629, 0, 5, 196630, 0, 5, 196631, 0, 5, 196632, 0, 5, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 4, 327679, 0, 4, 262144, 0, 5, 262145, 0, 5, 262146, 0, 5, 262147, 0, 5, 262148, 0, 5, 262149, 0, 5, 262150, 0, 5, 262151, 0, 5, 262152, 0, 5, 262153, 0, 5, 262154, 0, 5, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 5, 262161, 0, 5, 262162, 0, 5, 262163, 0, 5, 262164, 0, 5, 262165, 0, 5, 262166, 0, 5, 262167, 0, 5, 262168, 0, 5, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 4, 393215, 0, 4, 327680, 0, 5, 327681, 0, 5, 327682, 0, 5, 327683, 0, 5, 327684, 0, 5, 327685, 0, 5, 327686, 0, 5, 327687, 0, 5, 327688, 0, 5, 327689, 0, 5, 327690, 0, 5, 327691, 0, 5, 327692, 0, 5, 327693, 0, 5, 327694, 0, 5, 327695, 0, 5, 327696, 0, 5, 327697, 0, 5, 327698, 0, 5, 327699, 0, 5, 327700, 0, 5, 327701, 0, 5, 327702, 0, 5, 327703, 0, 5, 327704, 0, 5, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 4, 458751, 0, 4, 393216, 0, 5, 393217, 0, 5, 393218, 0, 5, 393219, 0, 5, 393220, 0, 5, 393221, 0, 5, 393222, 0, 5, 393223, 0, 5, 393224, 0, 5, 393225, 0, 5, 393226, 0, 5, 393227, 0, 5, 393228, 0, 5, 393229, 0, 5, 393230, 0, 5, 393231, 0, 5, 393232, 0, 5, 393233, 0, 5, 393234, 0, 5, 393235, 0, 5, 393236, 0, 5, 393237, 0, 5, 393238, 0, 5, 393239, 0, 5, 393240, 0, 5, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 4, 524287, 0, 4, 458752, 0, 5, 458753, 0, 5, 458754, 0, 5, 458755, 0, 5, 458756, 0, 5, 458757, 0, 5, 458758, 0, 5, 458759, 0, 5, 458760, 0, 5, 458761, 0, 5, 458762, 0, 5, 458763, 0, 5, 458764, 0, 5, 458765, 0, 5, 458766, 0, 5, 458767, 0, 5, 458768, 0, 5, 458769, 0, 5, 458770, 0, 5, 458771, 0, 5, 458772, 0, 5, 458773, 0, 5, 458774, 0, 5, 458775, 0, 5, 458776, 0, 5, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 4, 589823, 0, 4, 524288, 0, 5, 524289, 0, 5, 524290, 0, 5, 524291, 0, 5, 524292, 0, 5, 524293, 0, 5, 524294, 0, 5, 524295, 0, 5, 524296, 0, 5, 524297, 0, 5, 524298, 0, 5, 524299, 0, 5, 524300, 0, 5, 524301, 0, 5, 524302, 0, 5, 524303, 0, 5, 524304, 0, 5, 524305, 0, 5, 524306, 0, 5, 524307, 0, 5, 524308, 0, 5, 524309, 0, 5, 524310, 0, 5, 524311, 0, 5, 524312, 0, 5, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 4, 655359, 0, 4, 589824, 0, 5, 589825, 0, 5, 589826, 0, 5, 589827, 0, 5, 589828, 0, 5, 589829, 0, 5, 589830, 0, 5, 589831, 0, 5, 589832, 0, 5, 589833, 0, 5, 589834, 0, 5, 589835, 0, 5, 589836, 0, 5, 589837, 0, 5, 589838, 0, 5, 589839, 0, 5, 589840, 0, 5, 589841, 0, 5, 589842, 0, 5, 589843, 0, 5, 589844, 0, 5, 589845, 0, 5, 589846, 0, 5, 589847, 0, 5, 589848, 0, 5, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 4, 720895, 0, 4, 655360, 0, 5, 655361, 0, 5, 655362, 0, 5, 655363, 0, 5, 655364, 0, 5, 655365, 0, 5, 655366, 0, 5, 655367, 0, 5, 655368, 0, 5, 655369, 0, 5, 655370, 0, 5, 655371, 0, 5, 655372, 0, 5, 655373, 0, 5, 655374, 0, 5, 655375, 0, 5, 655376, 0, 5, 655377, 0, 5, 655378, 0, 5, 655379, 0, 5, 655380, 0, 5, 655381, 0, 5, 655382, 0, 5, 655383, 0, 5, 655384, 0, 5, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 4, 786431, 0, 4, 720896, 0, 5, 720897, 0, 5, 720898, 0, 5, 720899, 0, 5, 720900, 0, 5, 720901, 0, 5, 720902, 0, 5, 720903, 0, 5, 720904, 0, 5, 720905, 0, 5, 720906, 0, 5, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 5, 720913, 0, 5, 720914, 0, 5, 720915, 0, 5, 720916, 0, 5, 720917, 0, 5, 720918, 0, 5, 720919, 0, 5, 720920, 0, 5, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 720928, 0, 4, 851967, 0, 4, 786432, 0, 5, 786433, 0, 5, 786434, 0, 5, 786435, 0, 5, 786436, 0, 5, 786437, 0, 5, 786438, 0, 5, 786439, 0, 5, 786440, 0, 5, 786441, 0, 5, 786442, 0, 5, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 5, 786449, 0, 5, 786450, 0, 5, 786451, 0, 5, 786452, 0, 5, 786453, 0, 5, 786454, 0, 5, 786455, 0, 5, 786456, 0, 5, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 4, 917503, 0, 4, 851968, 0, 5, 851969, 0, 5, 851970, 0, 5, 851971, 0, 5, 851972, 0, 5, 851973, 0, 5, 851974, 0, 5, 851975, 0, 5, 851976, 0, 5, 851977, 0, 5, 851978, 0, 5, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 5, 851985, 0, 5, 851986, 0, 5, 851987, 0, 5, 851988, 0, 5, 851989, 0, 5, 851990, 0, 5, 851991, 0, 5, 851992, 0, 5, 851993, 0, 5, 851994, 0, 5, 851995, 0, 5, 851996, 0, 5, 851997, 0, 5, 851998, 0, 5, 851999, 0, 5, 852000, 0, 4, 983039, 0, 4, 917504, 0, 5, 917505, 0, 5, 917506, 0, 5, 917507, 0, 5, 917508, 0, 5, 917509, 0, 5, 917510, 0, 5, 917511, 0, 5, 917512, 0, 5, 917513, 0, 5, 917514, 0, 5, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 5, 917521, 0, 5, 917522, 0, 5, 917523, 0, 5, 917524, 0, 5, 917525, 0, 5, 917526, 0, 5, 917527, 0, 5, 917528, 0, 5, 917529, 0, 5, 917530, 0, 5, 917531, 0, 5, 917532, 0, 5, 917533, 0, 5, 917534, 0, 5, 917535, 0, 5, 917536, 0, 4, 1048575, 0, 4, 983040, 0, 5, 983041, 0, 5, 983042, 0, 5, 983043, 0, 5, 983044, 0, 5, 983045, 0, 5, 983046, 0, 5, 983047, 0, 5, 983048, 0, 5, 983049, 0, 5, 983050, 0, 5, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 5, 983057, 0, 5, 983058, 0, 5, 983059, 0, 5, 983060, 0, 5, 983061, 0, 5, 983062, 0, 5, 983063, 0, 5, 983064, 0, 5, 983065, 0, 5, 983066, 0, 5, 983067, 0, 5, 983068, 0, 5, 983069, 0, 5, 983070, 0, 5, 983071, 0, 5, 983072, 0, 4, 1114111, 0, 4, 1048576, 0, 4, 1048577, 0, 4, 1048578, 0, 4, 1048579, 0, 4, 1048580, 0, 4, 1048581, 0, 4, 1048582, 0, 4, 1048583, 0, 4, 1048584, 0, 4, 1048585, 0, 4, 1048586, 0, 4, 1048587, 0, 4, 1048588, 0, 4, 1048589, 0, 4, 1048590, 0, 4, 1048591, 0, 4, 1048592, 0, 4, 1048593, 0, 4, 1048594, 0, 4, 1048595, 0, 4, 1048596, 0, 4, 1048597, 0, 4, 1048598, 0, 4, 1048599, 0, 4, 1048600, 0, 4, 1048601, 0, 4, 1048602, 0, 4, 1048603, 0, 4, 1048604, 0, 4, 1048605, 0, 4, 1048606, 0, 4, 1048607, 0, 4, 1048608, 0, 4 )

[node name="WalkingArea" type="Area2D" parent="."]

[node name="CollisionShape2D5" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 916.361, 255.415 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 432.408, 431.536 )
scale = Vector2( 20, 20 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 429.824, 81.3082 )
scale = Vector2( 20, 20 )
shape = SubResource( 2 )

[node name="fallTile" type="Node2D" parent="."]

[node name="LevelButton" parent="." instance=ExtResource( 1 )]
position = Vector2( 960, 224 )

[node name="Button" parent="." instance=ExtResource( 7 )]
position = Vector2( 430.565, 429.167 )

[node name="Button2" parent="." instance=ExtResource( 9 )]
position = Vector2( 433.738, 90.0621 )

[node name="Bridge" parent="." instance=ExtResource( 3 )]
position = Vector2( 594, 252.178 )
script = ExtResource( 8 )

[node name="Bridge2" parent="." instance=ExtResource( 3 )]
position = Vector2( 175, 160.221 )
script = ExtResource( 10 )

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 386.149, 409.09 )

[node name="Player2" parent="." instance=ExtResource( 5 )]
position = Vector2( 386.711, 80.2981 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/fade = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 256 )
current = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 107.665
margin_top = 63.8171
margin_right = 274.665
margin_bottom = 103.817
text = "Time it roght, BOI"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="WalkingArea" to="." method="_on_WalkingArea_body_entered"]
[connection signal="body_exited" from="WalkingArea" to="." method="_on_WalkingArea_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
